Fixed broken LinkedIn link

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
             <div class="third">
                 <div class="padLeft">
                     <p>
-                        (<a href="mailto:bp5xj@virginia.edu">Email</a> | <a href="www.linkedin.com/in/babakpourkazemi">LinkedIn</a>)
+                        (<a href="mailto:bp5xj@virginia.edu">Email</a> | <a href="http://www.linkedin.com/in/babakpourkazemi">LinkedIn</a>)
                     </p>
                 </div>
             </div>
