--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Application content -->
+        <!-- Application content  test-->
         <div class="main-wrapper">
 
             <!--- Left Wrapper -->
