--- a/public/index.html
+++ b/public/index.html
@@ -43,26 +43,23 @@
         <div class="main-wrapper">
 
             <!--- Left Wrapper -->
-            <div class="left">
+            <div class="first">
                 <a href="http://www.github.com/BPKazemi" class="github">Don't click me!</a>
                 <div class="content-wrapper">
                     <div class="title name">BPkazemi</div>
                     <div class='subtitle'>(~~ Student @ UVA ~~)</div>
                     <div class="title-menu">
                         <ul>
-                            <li><a class="tab" href="#/about_me">About</a></li>
-                            <li><a class="tab" href="#/projects">Projects</a></li>
-                            <li><a class="tab" href="#/bucket_list">Bucket List</a></li>
-                            <li><a class="tab" href="http://www.bpkazemi.tumblr.com">Tumblr</a></li>
-                            <!-- <li><a class="tab" href="#/favorite_apps">Favorite Apps</a></li>
-                            <li><a class="tab" href="#/Quotes">Quotes</a></li>
-                            <li><a class="tab" href="#/daily_pain_points">Daily Pain Points</a></li> -->
+                            <li><a class="tab selected" href="about_me">About</a></li>
+                            <li><a class="tab" href="projects">Projects</a></li>
+                            <li><a class="tab" href="bucket_list">Bucket List</a></li>
+                            <li><a class="tab" href="http://www.bpkazemi.tumblr.com"><u>Tumblr</u></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
             <!-- Right Wrapper -->
-            <div class="right">
+            <div class="second">
                 <div class="content">
                     <div ng-view=""></div>
                 </div>
@@ -76,7 +73,7 @@
             </div>
         </div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <!-- Google Analytics -->
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
