Trying to fix some 404s

--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,9 @@
                     <div class='subtitle'>(~~ Student @ UVA ~~)</div>
                     <div class="title-menu">
                         <ul>
-                            <li><a class="tab selected" href="about_me">About</a></li>
-                            <li><a class="tab" href="projects">Projects</a></li>
-                            <li><a class="tab" href="bucket_list">Bucket List</a></li>
+                            <li><a class="tab selected" href="#/about_me">About</a></li>
+                            <li><a class="tab" href="#/projects">Projects</a></li>
+                            <li><a class="tab" href="#/bucket_list">Bucket List</a></li>
                             <li><a class="tab" href="http://www.bpkazemi.tumblr.com"><u>Tumblr</u></a></li>
                         </ul>
                     </div>
