--- a/public/index.html
+++ b/public/index.html
@@ -51,17 +51,12 @@
                     </div>
                 </div>
                 <!-- Right Wrapper -->
-                <div class="second col-xs-12 col-md-7">
+                <div class="second col-xs-12 col-md-8">
                     <div class="content">
                         <div ng-view=""></div>
                     </div>
                 </div>
-                <div class="third col-xs-12 col-md-2">
-                    <div class="padLeft">
-                        <p>
-                            (<a href="mailto:bp5xj@virginia.edu">Email</a> | <a href="//www.linkedin.com/in/babakpourkazemi">LinkedIn</a>)
-                        </p>
-                    </div>
+                <div class="third col-xs-12 col-md-1">
                 </div>
             </div>
         </div>
@@ -73,6 +68,8 @@
         <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
         <!-- Angular -->
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.8/angular.min.js" type="text/javascript"></script>
+        <!-- Oridomi -->
+        <script src="./vendor/oridomi.min.js"></script>
         <!-- Application Scripts -->
         <script type="text/javascript" src="./js/main.js"></script>
         <!-- Google Analytics -->
