Smaller font, also hid broken links (darn A records).

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,7 @@
                     <div class="content-wrapper">
                         <h1 class="name">BPourkazemi</h1>
                         <div class='subtitle'>(~~ Student @ UVA ~~)</div>
+                        <!-- This side nav sucks - make it legit and apply styling -->
                         <div class="side-nav-a">
                             <ul>
                                 <li><a class="tab selected" href="#/about_me">About</a></li>
@@ -47,7 +48,7 @@
                                 <li><a class="tab" href="http://www.bpkazemi.tumblr.com"><u>Tumblr</u></a></li>
                             </ul>
                         </div>
-                        <a href="//www.github.com/BPKazemi" class="github">Don't click me!</a>
+                        <!-- Until c-name records are up... <a href="//www.github.com/BPKazemi" class="github">Don't click me!</a> -->
                     </div>
                 </div>
                 <!-- Right Wrapper -->
