Updated sidebar nav menu to be bootstrappy. Bootstrap is no longer pointing to a CDN so I can customize the css.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
         <!-- ~~~~~~~ Stylesheets ~~~~~~~ -->
         <!-- Bootstrap 3 -->
-        <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="stylesheets/css/bootstrap.css">
         <!-- Google Fonts (Kavoon & Lato) -->
         <link href='http://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
@@ -39,15 +39,13 @@
                     <div class="content-wrapper">
                         <h1 class="name">BPourkazemi</h1>
                         <div class='subtitle'>(~~ Student @ UVA ~~)</div>
-                        <!-- This side nav sucks - make it legit and apply styling -->
-                        <div class="side-nav-a">
-                            <ul>
-                                <li><a class="tab selected" href="#/about_me">About</a></li>
-                                <li><a class="tab" href="#/projects">Projects</a></li>
-                                <li><a class="tab" href="#/bucket_list">Bucket List</a></li>
-                                <li><a class="tab" href="http://www.bpkazemi.tumblr.com"><u>Tumblr</u></a></li>
-                            </ul>
-                        </div>
+                        <ul class="nav nav-pills nav-stacked">
+                            <li class="active pill"><a href="#/about_me">About</a></li>
+                            <li class="pill"><a href="#/projects">Projects</a></li>
+                            <li class="pill"><a href="#/bucket_list">Bucket List</a></li>
+                            <li class="pill"><a href="http://www.bpkazemi.tumblr.com">Tumblr</a></li>
+                        </ul>
+
                         <!-- Until c-name records are up... <a href="//www.github.com/BPKazemi" class="github">Don't click me!</a> -->
                     </div>
                 </div>
